欢迎页，登录页开发 用户数据的本地化存取

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <!--文字颜色浅灰-->
     <color name="french_gray">#909090</color>
     <!--浅绿色-->
-    <color name="light_green">#00FFC3</color>
+    <color name="light_green">#66d1b9</color>
 
 
 </resources>
