--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,73 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@mipmap/login_bg_img"
     android:orientation="vertical">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="100dp"
-       android:gravity="center_horizontal"
-       android:paddingLeft="@dimen/common_margin"
-       android:paddingRight="@dimen/common_margin"
-       android:orientation="vertical"
-       >
-
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/newfarmer_operation"
-           android:textSize="24sp"
-           android:textColor="@color/green"
-           />
-       <LinearLayout
-           android:layout_marginTop="20dp"
-           android:layout_width="match_parent"
-           android:layout_height="120dp"
-           android:orientation="vertical"
-           android:background="@drawable/write_corners_bg">
+    <com.xxnr.operation.widget.SoftKeyBoardSatusView
+        android:id="@+id/login_soft_status_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
-               <EditText
-                   android:maxLength="11"
-                   android:inputType="number"
-                   android:id="@+id/login_name_et"
-                   android:gravity="center_vertical"
-                   android:hint="@string/login_user_name"
-                   android:layout_weight="1"
-                   android:layout_marginLeft="@dimen/common_margin_10"
-                   android:layout_width="match_parent"
-                   android:layout_height="0dp"
-                   android:textColor="@color/french_gray"
-                   android:background="@null"
+    <LinearLayout
+        android:id="@+id/login_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/common_margin"
+        android:paddingRight="@dimen/common_margin">
 
-                   />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-           <include layout="@layout/line_lay"/>
-           <EditText
-               android:id="@+id/login_pass_et"
-               android:gravity="center_vertical"
-               android:hint="@string/login_password"
-               android:layout_weight="1"
-               android:layout_marginLeft="@dimen/common_margin_10"
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:textColor="@color/french_gray"
-               android:background="@null"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@mipmap/xxnr_logo_white" />
 
-       </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/operating_version_write" />
 
-       <TextView
-           android:id="@+id/login_sure_bt"
-           android:text="@string/login_button_name"
-           android:gravity="center"
-           android:textColor="@color/white"
-           android:layout_marginTop="15dp"
-           android:background="@drawable/selector_green_lightgreen"
-           android:layout_width="match_parent"
-           android:layout_height="35dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/write_corners_bg"
+                android:orientation="vertical">
 
-   </LinearLayout>
-</LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="55dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@mipmap/username_icon" />
+
+                    </LinearLayout>
+
+                    <com.xxnr.operation.widget.ClearEditText
+                        android:id="@+id/login_name_et"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/common_margin_10"
+                        android:background="@null"
+                        android:drawableRight="@drawable/delete_selector"
+                        android:gravity="center_vertical"
+                        android:hint="@string/login_user_name"
+                        android:maxLength="20"
+                        android:textColorHint="@color/french_gray" />
+                </LinearLayout>
+
+
+                <include layout="@layout/line_lay" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="55dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@mipmap/password_icon" />
+
+                    </LinearLayout>
+
+
+                    <com.xxnr.operation.widget.ClearEditText
+                        android:id="@+id/login_pass_et"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/common_margin_10"
+                        android:background="@null"
+                        android:drawableRight="@drawable/delete_selector"
+                        android:gravity="center_vertical"
+                        android:hint="@string/login_password"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:textColorHint="@color/french_gray" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/login_sure_bt"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/selector_green_lightgreen"
+            android:gravity="center"
+            android:text="@string/login_button_name"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/login_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
