运营版1.1剩下数据中心搜索和汇总的第二张表

--- a/app/src/main/res/layout/fragment_daily_report.xml
+++ b/app/src/main/res/layout/fragment_daily_report.xml
@@ -271,6 +271,40 @@
 
                 </LinearLayout>
 
+
+                <LinearLayout
+                    android:id="@+id/agent_reg_count_ll_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/selector_daily_report"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:background="@mipmap/agent_icon" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:text="经纪人数" />
+
+                    <TextView
+                        android:id="@+id/agent_reg_count_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/common_margin"
+                        android:text=""
+                        android:textColor="@color/daily_report_count"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+
+
                 <LinearLayout
                     android:id="@+id/order_count_ll_2"
                     android:layout_width="match_parent"
@@ -354,7 +388,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
-                        android:text="已支付金额" />
+                        android:text="已完成金额" />
 
                     <TextView
                         android:id="@+id/pay_price_2"
