--- a/app/src/main/res/layout/activity_data_week_detail.xml
+++ b/app/src/main/res/layout/activity_data_week_detail.xml
@@ -3,13 +3,13 @@
     style="@style/base_activity"
     android:orientation="vertical">
 
-
     <include layout="@layout/title_lay" />
 
     <ScrollView
         android:id="@+id/data_detail_scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:scrollbars="none">
 
         <LinearLayout
@@ -61,10 +61,47 @@
                 android:layout_marginRight="@dimen/common_margin"
                 android:layout_marginTop="10dp" />
 
+
+            <LinearLayout
+                android:id="@+id/column_tip_ll"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:background="#bfe83e" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="注册用户数"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@color/column_orange" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="新经纪人数"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <include layout="@layout/div_view" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="10dp"
                 android:background="@color/white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -75,16 +112,71 @@
                     android:id="@+id/list_title1_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:text="日期" />
 
+
                 <TextView
+                    android:gravity="right"
                     android:id="@+id/list_title2_tv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="注侧用户数" />
+
+
+                <TextView
+                    android:gravity="right"
+                    android:id="@+id/list_title3_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:text="已支付金额" />
 
             </LinearLayout>
+
+            <include layout="@layout/line_lay"/>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/order_title_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/common_margin"
+                android:paddingRight="@dimen/common_margin">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:textColor="@color/daily_report_count"
+                    android:text="合计" />
+
+
+                <TextView
+                    android:gravity="right"
+                    android:id="@+id/total_count_tv1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/daily_report_count"
+                    android:text="0" />
+
+
+                <TextView
+                    android:gravity="right"
+                    android:id="@+id/total_count_tv2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textColor="@color/daily_report_count"
+                    android:text="0" />
+
+            </LinearLayout>
+
+            <include layout="@layout/line_lay"/>
 
             <com.xxnr.operation.widget.UnSwipeListView
                 android:id="@+id/unSwipeListView"
