--- a/app/src/main/res/layout/fragment_agent_yesterday_report.xml
+++ b/app/src/main/res/layout/fragment_agent_yesterday_report.xml
@@ -36,22 +36,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/default_act_bg"
-            android:gravity="center_vertical">
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/common_margin"
+            android:paddingRight="@dimen/common_margin">
 
             <TextView
                 android:layout_width="4dp"
                 android:layout_height="15dp"
-                android:layout_marginLeft="@dimen/common_margin"
                 android:background="@mipmap/list_title_icon1" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="经纪人业绩排行" />
+                android:layout_weight="1"
+                android:text="昨日业绩排行" />
+
+            <TextView
+                android:id="@+id/select_agent_page_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/list_bg_selector"
+                android:drawablePadding="5dp"
+                android:drawableRight="@mipmap/arrow_right2"
+                android:gravity="center"
+                android:text="汇总排行" />
+
 
         </LinearLayout>
+
+        <include layout="@layout/line_lay" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -75,7 +91,7 @@
 
                     <com.xxnr.operation.widget.UnSwipeListView
                         android:id="@+id/unSwipeListView"
-                        android:layout_width="482dp"
+                        android:layout_width="559dp"
                         android:layout_height="match_parent"
                         android:background="@color/white" />
 
@@ -86,6 +102,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
