--- a/app/src/main/res/layout/item_data_detail.xml
+++ b/app/src/main/res/layout/item_data_detail.xml
@@ -19,12 +19,22 @@
             android:id="@+id/item_data_detail_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:text="" />
 
         <TextView
+            android:gravity="right"
+            android:id="@+id/item_data_detail_count"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="" />
+
+        <TextView
+            android:gravity="right"
             android:id="@+id/item_data_detail_content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="" />
 
