--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -66,4 +66,8 @@
     <!--日期加减不可点颜色-->
     <color name="date_unable">#a2a2a2</color>
 
+    <color name="column_orange">#FCAC42</color>
+
+
+
 </resources>
