--- a/app/src/main/res/drawable/write_half_circle_bg.xml
+++ b/app/src/main/res/drawable/write_half_circle_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="60dip" />
+        android:radius="60dp" />
     <solid
-        android:color="@color/white" />
+        android:color="@color/order_title_bg" />
 </shape>
