--- a/app/src/main/res/layout/fragment_agent_group_report.xml
+++ b/app/src/main/res/layout/fragment_agent_group_report.xml
@@ -16,67 +16,59 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/write_half_circle_bg">
-
-
-            <ImageView
-                android:layout_marginRight="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@mipmap/search_icon_gary" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="搜索"
-                android:textColor="@color/deep_black" />
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/date_tv_ll"
-            android:layout_width="wrap_content"
-            android:layout_height="31dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="12dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/selector_date_title_bg"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_height="50dp"
+            android:background="@color/order_title_bg">
 
             <LinearLayout
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@color/order_title_bg"
-                android:gravity="center">
+                android:id="@+id/date_tv_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/selector_date_title_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/date_icon_bg_with_radius"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@mipmap/calendar_icon" />
+
+                </LinearLayout>
 
                 <TextView
+                    android:id="@+id/date_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@mipmap/calendar_icon" />
-
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:text="5月07日-05月13日"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:text="5月07日-05月13日" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/select_agent_page_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp"
+                android:drawablePadding="5dp"
+                android:drawableRight="@mipmap/arrow_right2"
+                android:gravity="center"
+                android:text="昨日排行"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
 
 
         <include layout="@layout/line_lay" />
@@ -85,69 +77,94 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="@color/white"
-            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingLeft="@dimen/common_margin"
             android:paddingRight="@dimen/common_margin">
 
-            <TextView
-                android:layout_width="4dp"
-                android:layout_height="15dp"
-                android:background="@mipmap/list_title_icon1" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:text="业绩进度汇总" />
-
-            <TextView
-                android:id="@+id/select_agent_page_tv"
+            <LinearLayout
+                android:id="@+id/select_agent_group_ll"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/list_bg_selector"
-                android:drawablePadding="5dp"
-                android:drawableRight="@mipmap/arrow_right2"
-                android:gravity="center"
-                android:text="昨日排行" />
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="4dp"
+                    android:layout_height="15dp"
+                    android:background="@mipmap/list_title_icon1" />
+
+                <TextView
+                    android:id="@+id/select_agent_group_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="业绩进度汇总" />
+
+
+                <ImageView
+                    android:id="@+id/select_agent_group_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:background="@mipmap/arrow_down" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/search_content_ll"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="26dp"
+                    android:background="@drawable/write_half_circle_bg"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:visibility="invisible">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="9dp"
+                        android:background="@mipmap/search_icon_gary" />
+
+                    <com.xxnr.operation.widget.ClearEditText
+                        android:id="@+id/clear_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="5dp"
+                        android:background="@null"
+                        android:hint="经纪人姓名/手机号"
+                        android:singleLine="true"
+                        android:inputType="text"
+                        android:imeOptions="actionSearch"
+                        android:textColor="@color/deep_black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+
+                <ImageView
+                    android:id="@+id/search_icon_iv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|center_vertical"
+                    android:background="@mipmap/search_icon_gary" />
+
+            </FrameLayout>
 
 
         </LinearLayout>
 
         <include layout="@layout/line_lay" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <com.xxnr.operation.widget.UnSwipeListView
-                android:id="@+id/unSwipeListView_name"
-                android:layout_width="81dp"
-                android:layout_height="match_parent" />
-
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
-
-                    <com.xxnr.operation.widget.UnSwipeListView
-                        android:id="@+id/unSwipeListView"
-                        android:layout_width="385dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/white" />
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
-
-        </LinearLayout>
+        <FrameLayout
+            android:id="@+id/agent_group_frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
