--- a/app/src/main/res/layout/head_agent_group_report_order.xml
+++ b/app/src/main/res/layout/head_agent_group_report_order.xml
@@ -11,45 +11,45 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
+
         <LinearLayout
-            android:id="@+id/title_new_customer_count_ll"
-            android:layout_width="77dp"
+            android:id="@+id/order_complete_count_ll"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="match_parent"
             android:gravity="center">
 
             <TextView
-                android:id="@+id/title_new_customer_count"
+                android:id="@+id/order_complete_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxEms="3"
                 android:text="完成订单数"
                 android:textSize="14sp" />
 
             <ImageView
-                android:id="@+id/title_new_customer_count_icon"
+                android:id="@+id/order_complete_count_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/sort_up" />
 
         </LinearLayout>
 
-
         <LinearLayout
-            android:id="@+id/title_total_agent_count_ll"
-            android:layout_width="77dp"
+            android:id="@+id/order_complete_price_ll"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="match_parent"
             android:gravity="center">
 
             <TextView
-                android:id="@+id/title_total_agent_count"
+                android:id="@+id/order_complete_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxEms="3"
                 android:text="完成订单金额(元)"
                 android:textSize="14sp" />
 
             <ImageView
-                android:id="@+id/title_total_agent_count_icon"
+                android:id="@+id/order_complete_price_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/sort_up" />
